# TicTacToe_Network

./: .gitignore  README.md
TicTacToe/: CMakeLists.txt  ComputerLogic.c  ComputerLogic.h  ErrorMessages.h  Feldausgabe.c  Feldausgabe.h  Logik.c  Logik.h  Netzwerk.c  Netzwerk.h  StructDefinitions.h  main.c
